update readme and pom
Signed-off-by: Derek Smart <derek@grindaga.com>